[gd_scene load_steps=17 format=1]

[ext_resource path="res://files/scripts/statspanel.gd" type="Script" id=1]
[ext_resource path="res://files/buttons/icons/strength.png" type="Texture" id=2]
[ext_resource path="res://files/buttons/levelup.png" type="Texture" id=3]
[ext_resource path="res://files/buttons/levelupdown.png" type="Texture" id=4]
[ext_resource path="res://files/buttons/icons/agility.png" type="Texture" id=5]
[ext_resource path="res://files/buttons/icons/magic.png" type="Texture" id=6]
[ext_resource path="res://files/buttons/icons/endurance.png" type="Texture" id=7]
[ext_resource path="res://files/buttons/icons/courage.png" type="Texture" id=8]
[ext_resource path="res://files/buttons/icons/confidence.png" type="Texture" id=9]
[ext_resource path="res://files/buttons/icons/wit.png" type="Texture" id=10]
[ext_resource path="res://files/buttons/icons/charm.png" type="Texture" id=11]
[ext_resource path="res://files/buttons/icons/xpbot.png" type="Texture" id=12]
[ext_resource path="res://files/buttons/icons/xpup.png" type="Texture" id=13]
[ext_resource path="res://files/buttons/icons/xpmid.png" type="Texture" id=14]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="statspanel" type="Panel"]

anchor/left = 3
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 537.0
margin/top = 1.0
margin/right = 677.0
margin/bottom = 162.0
script/script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 200.0
margin/top = 17.0
margin/right = 71.0
margin/bottom = 33.0
text = "Physical Stats"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sstr" type="TextureFrame" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 167.0
margin/top = 43.0
margin/right = 140.0
margin/bottom = 71.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Label" type="RichTextLabel" parent="sstr"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 29.0
margin/top = 2.0
margin/right = 101.0
margin/bottom = 22.0
bbcode/enabled = true
bbcode/bbcode = "100/100"
visible_characters = -1

[node name="Control" type="Control" parent="sstr"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 77.0
margin/bottom = 27.0

[node name="Button" type="Button" parent="sstr"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 54.0
margin/top = 2.0
margin/right = 74.0
margin/bottom = 22.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="sagi" type="TextureFrame" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 167.0
margin/top = 72.0
margin/right = 140.0
margin/bottom = 100.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="Label" type="RichTextLabel" parent="sagi"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 29.0
margin/top = 2.0
margin/right = 101.0
margin/bottom = 22.0
bbcode/enabled = true
bbcode/bbcode = "100/100"
visible_characters = -1

[node name="Control" type="Control" parent="sagi"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 65.0
margin/bottom = 27.0

[node name="Button" type="Button" parent="sagi"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 54.0
margin/top = 2.0
margin/right = 74.0
margin/bottom = 22.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="smaf" type="TextureFrame" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 167.0
margin/top = 101.0
margin/right = 140.0
margin/bottom = 129.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Label" type="RichTextLabel" parent="smaf"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 29.0
margin/top = 2.0
margin/right = 101.0
margin/bottom = 22.0
bbcode/enabled = true
bbcode/bbcode = "100/100"
visible_characters = -1

[node name="Control" type="Control" parent="smaf"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 65.0
margin/bottom = 27.0

[node name="Button" type="Button" parent="smaf"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 54.0
margin/top = 2.0
margin/right = 74.0
margin/bottom = 22.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="send" type="TextureFrame" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 167.0
margin/top = 130.0
margin/right = 140.0
margin/bottom = 158.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="Label" type="RichTextLabel" parent="send"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 29.0
margin/top = 2.0
margin/right = 101.0
margin/bottom = 22.0
bbcode/enabled = true
bbcode/bbcode = "100/100"
visible_characters = -1

[node name="Control" type="Control" parent="send"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 65.0
margin/bottom = 27.0

[node name="Button" type="Button" parent="send"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 54.0
margin/top = 2.0
margin/right = 74.0
margin/bottom = 22.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label1" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 17.0
margin/right = -99.0
margin/bottom = 33.0
text = "Mental Stats"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="cour" type="TextureFrame" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -13.0
margin/top = 43.0
margin/right = -40.0
margin/bottom = 71.0
texture = ExtResource( 8 )
stretch_mode = 0

[node name="Label" type="RichTextLabel" parent="cour"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 29.0
margin/top = 2.0
margin/right = 101.0
margin/bottom = 22.0
bbcode/enabled = true
bbcode/bbcode = "100/100"
visible_characters = -1

[node name="Control" type="Control" parent="cour"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 65.0
margin/bottom = 27.0

[node name="conf" type="TextureFrame" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -13.0
margin/top = 72.0
margin/right = -40.0
margin/bottom = 100.0
texture = ExtResource( 9 )
stretch_mode = 0

[node name="Label" type="RichTextLabel" parent="conf"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 29.0
margin/top = 2.0
margin/right = 101.0
margin/bottom = 22.0
bbcode/enabled = true
bbcode/bbcode = "100/100"
visible_characters = -1

[node name="Control" type="Control" parent="conf"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 65.0
margin/bottom = 27.0

[node name="wit" type="TextureFrame" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -13.0
margin/top = 101.0
margin/right = -40.0
margin/bottom = 129.0
texture = ExtResource( 10 )
stretch_mode = 0

[node name="Label" type="RichTextLabel" parent="wit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 29.0
margin/top = 2.0
margin/right = 101.0
margin/bottom = 22.0
bbcode/enabled = true
bbcode/bbcode = "100/100"
visible_characters = -1

[node name="Control" type="Control" parent="wit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 65.0
margin/bottom = 27.0

[node name="charm" type="TextureFrame" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -13.0
margin/top = 130.0
margin/right = -40.0
margin/bottom = 158.0
texture = ExtResource( 11 )
stretch_mode = 0

[node name="Label" type="RichTextLabel" parent="charm"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 29.0
margin/top = 2.0
margin/right = 101.0
margin/bottom = 22.0
bbcode/enabled = true
bbcode/bbcode = "100/100"
visible_characters = -1

[node name="Control" type="Control" parent="charm"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 65.0
margin/bottom = 27.0

[node name="leveltext" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 171.0
margin/right = 370.0
margin/bottom = 278.0
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1

[node name="levelreqs" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 312.0
margin/right = 370.0
margin/bottom = 419.0
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1

[node name="traittext" type="RichTextLabel" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 23.0
margin/top = 163.0
margin/right = 24.0
margin/bottom = 270.0
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1

[node name="levelprogress" type="TextureProgress" parent="."]

hint/tooltip = "At 100% you can talk to servant to advance their level"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 279.0
margin/right = 210.0
margin/bottom = 304.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 45.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 12 )
texture/over = ExtResource( 13 )
texture/progress = ExtResource( 14 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Label" type="Label" parent="levelprogress"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 59.0
margin/top = -15.0
margin/right = 150.0
margin/bottom = -1.0
text = "Experience"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="meta_clicked" from="leveltext" to="." method="_on_leveltext_meta_clicked"]

[connection signal="meta_clicked" from="traittext" to="." method="_on_traittext_meta_clicked"]

[connection signal="mouse_exit" from="traittext" to="." method="_on_traittext_mouse_exit"]


